Correction de la position des boutons dans le style CSS et ajout de propriétés pour améliorer l'affichage et l'alignement.

--- a/src/style.css
+++ b/src/style.css
@@ -179,9 +179,12 @@ nav ul li {
 
    .buttons {
       position: relative;
-      bottom: 465px;
+      bottom: 457px;
       left: 185px;
       width: 8rem;
+      height: 4.1rem;
+      display: flex;
+      align-items: center;
       z-index: 0;
    }
 }
